# RustBot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  commands.rs  dispatch.rs  main.rs  runtime.rs  types.rs  utils.rs
src/client/: http.rs
src/commands/: admin.rs  basic.rs  mod.rs  store.rs
